[00002] Log Page State Created.

--- a/src/app/submodules/log-page/components/log-page/log-page.component.html
+++ b/src/app/submodules/log-page/components/log-page/log-page.component.html
@@ -1,1 +1,5 @@
-<p>log-page works!</p>
+<h3>Operations:</h3>
+
+<ng-container *ngIf="operations$ | async as operations">
+	<pre> {{ operations | json }}</pre>
+</ng-container>
