--- a/src/app/submodules/shell/components/shell/shell.component.html
+++ b/src/app/submodules/shell/components/shell/shell.component.html
@@ -1,3 +1,13 @@
-<h1>shell works!</h1>
+<div class="d-flex flex-column h-100">
+	<app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+	<div class="flex-grow-1">
+		<div class="h-100 d-flex">
+			<app-sidebar></app-sidebar>
+
+			<div class="flex-grow-1 p-3">
+				<router-outlet></router-outlet>
+			</div>
+		</div>
+	</div>
+</div>
