--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import "./node_modules/bootstrap/scss/bootstrap";
+@import './node_modules/bootstrap/scss/bootstrap';
 
 /* Importing Datepicker SCSS file. */
-@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+@import 'node_modules/ngx-bootstrap/datepicker/bs-datepicker';
+
+/* Default Styles */
+html,
+body {
+	height: 100%;
+	font-family: 'Roboto';
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+small {
+	margin: 0;
+}
+
+.shadow-bottom {
+	box-shadow: 0 4px 8px 0 black;
+}
+
+.shadow-right {
+	box-shadow: 4px 0 8px 0 black;
+}
+
+.pointer {
+	cursor: pointer;
+}
