--- a/src/app/submodules/shell/components/navbar/navbar.component.html
+++ b/src/app/submodules/shell/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="d-flex justify-content-between align-items-center px-4 shadow-bottom" [style.height.rem]="3.5">
 	<div routerLink="dashboard" class="d-flex align-items-center gap-2 user-select-none pointer">
-		<img src="assets/icons/diamond.svg" alt="icon" width="24" height="24" />
+		<app-svg-icon src="assets/icons/diamond.svg" />
 		<h5>Finance Manager</h5>
 	</div>
 
