--- a/src/app/submodules/shell/components/sidebar/sidebar.component.html
+++ b/src/app/submodules/shell/components/sidebar/sidebar.component.html
@@ -15,10 +15,10 @@
 
 	<div class="d-flex flex-column gap-3">
 		<ng-container *ngFor="let link of links">
-			<div [routerLink]="link.path" routerLinkActive="text-primary" class="d-flex gap-3 user-select-none pointer">
+			<a [routerLink]="link.path" [routerLinkActive]="'text-primary'" class="d-flex gap-3 align-items-center">
 				<app-svg-icon [src]="'assets/icons/' + link.icon" />
 				<p>{{ link.name }}</p>
-			</div>
+			</a>
 		</ng-container>
 	</div>
 </div>
