--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,12 @@ small {
 	margin: 0;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+	user-select: none;
+}
+
 .shadow-bottom {
 	box-shadow: 0 4px 8px 0 black;
 }
