--- a/src/app/submodules/shell/components/navbar/navbar.component.html
+++ b/src/app/submodules/shell/components/navbar/navbar.component.html
@@ -4,11 +4,13 @@
 		<h5>Finance Manager</h5>
 	</a>
 
-	<div class="d-flex gap-3">
-		<img src="" alt="profile-picture" />
-		<div class="d-flex flex-column">
-			<p>Dmytro Chyrva</p>
-			<small class="text-secondary">Administrator</small>
-		</div>
+	<div class="d-flex gap-3 align-items-center">
+		<ng-container *ngIf="user$ | async as user">
+			<img class="profile-picture border-2" [src]="user.picture" alt="profile-picture" />
+			<div class="d-flex flex-column">
+				<p>{{ user.name }}</p>
+				<small class="text-secondary">Administrator</small>
+			</div>
+		</ng-container>
 	</div>
 </nav>
