--- a/src/app/submodules/shell/components/navbar/navbar.component.html
+++ b/src/app/submodules/shell/components/navbar/navbar.component.html
@@ -1,16 +1,24 @@
 <nav class="d-flex justify-content-between align-items-center px-4 shadow-bottom" [style.height.rem]="3.5">
+	<!---------------------------------------------------- Branding ----------------------------------------------------->
 	<a routerLink="dashboard" class="d-flex align-items-center gap-2 pointer">
 		<app-svg-icon src="assets/icons/diamond.svg" />
 		<h5>Finance Manager</h5>
 	</a>
 
-	<div class="d-flex gap-3 align-items-center">
-		<ng-container *ngIf="user$ | async as user">
-			<img class="profile-picture border-2" [src]="user.picture" alt="profile-picture" />
-			<div class="d-flex flex-column">
-				<p>{{ user.name }}</p>
-				<small class="text-secondary">Administrator</small>
+	<!---------------------------------------------------- User Menu ---------------------------------------------------->
+	<ng-container *ngIf="user$ | async as user">
+		<div class="btn-group" dropdown>
+			<div class="d-flex gap-3 align-items-center pointer" dropdownToggle>
+				<img class="profile-picture border-2" [src]="user.picture" alt="profile-picture" />
+				<div class="d-flex flex-column">
+					<p>{{ user.name }}</p>
+					<small class="text-secondary">Administrator</small>
+				</div>
 			</div>
-		</ng-container>
-	</div>
+
+			<div *dropdownMenu class="dropdown-menu">
+				<button class="dropdown-item" (click)="logOut()">Log Out</button>
+			</div>
+		</div>
+	</ng-container>
 </nav>
